--- a/styles/styles.css
+++ b/styles/styles.css
@@ -318,14 +318,20 @@ h1 {
 }
 
 .headerBox {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
   border-radius: 2px;
   padding: 25px;
   -webkit-box-shadow: 0px 8px 6px -6px #000;
           box-shadow: 0px 8px 6px -6px #000;
+  height: 20vh;
+  min-height: 160px;
   background: rgba(34, 34, 34, 0.9);
+}
+
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 999;
 }
 
 h2 {
@@ -365,7 +371,7 @@ select:focus {
   outline: 1px solid #f6da21;
 }
 
-[type="submit"] {
+[type='submit'] {
   padding: 7px 30px;
   width: 168px;
   font-size: 1.6rem;
@@ -375,6 +381,8 @@ select:focus {
 .results {
   background: #253031;
   color: #EEF0F2;
+  height: calc(80vh - 40px);
+  min-height: 700px;
 }
 
 .recommendedMovie {
